tests/bad/expr-statements/if_missing_else.ae
/// fail: Expression-if must have an 'else' branch

def main() {
    let x = if 5 < 10 {
        yield "hello"
    }
}